...

                        <EditText
                            android:id="@+id/etIdentifier"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/etPatternPackage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/etDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/etCurrencyCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/etParameters"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/etMinorCurrencyUnitDigits"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/etTemporalUnit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/etTermRangeMax"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/etBalanceRangeMinimum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/etMaximumBalanceRange"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/etMinInterestRange"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/etMaximumInterestRange"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...
