...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollViewProductReviewStep"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
...

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/identifier" />

                <TextView
                    android:id="@+id/tvProductIdentifier"
                    style="@style/TextViewReview.Input"
                    android:textColor="@color/black" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tvProductName"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/pattern_package" />

                <TextView
                    android:id="@+id/tvPatternPackageProduct"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/tvProductDescription"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/currency_code" />

                <TextView
                    android:id="@+id/tvProductCurrencyCode"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/minor_currency_unit_digits" />

                <TextView
                    android:id="@+id/tvProductMinorCurrencyUnit"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/parameters" />

                <TextView
                    android:id="@+id/tvParameters"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/interest_basis" />

                <TextView
                    android:id="@+id/tvInterestBasis"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <LinearLayout
                    android:id="@+id/llHeadThree"
...
                <TextView
                    style="@style/TextViewReview.Head"
                    android:paddingTop="@dimen/layout_padding_8dp"
                    android:text="@string/account_assignments" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvProductAccountAssignmentsStepReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_padding_12dp"
                    android:layout_marginBottom="@dimen/layout_padding_12dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="2"
...
                <TextView
                    style="@style/TextViewReview.Head"
                    android:paddingTop="@dimen/layout_padding_8dp"
                    android:text="@string/temporal_unit" />

                <TextView
                    android:id="@+id/tvProductTemporalUnit"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
...
