...
                tools:text="Varun Jain"
                android:textColor="@color/black" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivEditProductAccountAss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_edit_black_24dp" />

        <ImageView
            android:id="@+id/ivDeleteProductAccountAss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding_12dp"
            android:layout_marginLeft="@dimen/layout_padding_12dp"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_delete_black_24dp" />
...
